...
      error: () => `Error`,
      retry: () => `Retry`,
      sent: () => `Sent`,
      request: () => `Request`,
    },
    buttonAction: {
      confirm: () => `Confirm`,
      cancel: () => `Cancel`,
      decline: () => `Decline`,
      request: () => `Request`,
      send: () => `Send`,
      accept: () => `Accept`,
      submit: () => `Submit`,
      continue: () => `Continue`,
    },
    textPressable: {
      cancel: () => `Cancel`,
    },
  },
...
  invitesNotification: {
    description: (inviteCount: number) =>
      `You have ${pluralize(inviteCount, "invite")} available.`,
  },
  // NotificationsScreen.tsx
  notifications: {
    screenHeader: () => `Notifications`,
    noNotifications: () => `No notifications`,
  },
  // RequestNotificationRow.tsx
  requestNotification: {
    msgVerb: {
      via: () => `via`,
...
  },

  // ------------ ONBOARDING ------------
  // AllowNotifsScreen.tsx
  allowNotifs: {
    screenHeader: () => `Notifications`,
    allowButton: () => `Allow Notifications`,
    skipButton: () => `Skip`,
    instructions: () =>
      `You will only be notified about activity on your account.`,
  },
  // settings.ts
  settingsModal: {
...
  onboardingChooseName: {
    screenHeader: () => `Choose Username`,
    instructions: () =>
      `Choose a username you'll go by on Daimo. Your username is public & on-chain.`,
    picker: {
      title: () => `choose a username`,
      createButton: () => `CREATE ACCOUNT`,
      generateRandom: () => `GENERATE RANDOM`,
      error: () => `offline?`,
      taken: () => `sorry, that name is taken`,
      available: () => `available`,
    },
  },
...
  onboardingEnterInvite: {
    screenHeader: () => `Enter Invite Code`,
    waitlistButton: () => `JOIN WAITLIST`,
    instructions: () =>
      `Type your invite code below or paste a link.\nJoin the waitlist if you don't have a code.`,
    inviteCode: {
      title: () => `enter invite code`,
      button: () => `Submit`,
    },
  },
  // OnboardingIntroScreen.tsx
  onboardingIntro: {
    title: () => `Welcome to Daimo`,
    subtitle: () => `Pay or receive USDC anywhere`,
    acceptInviteButton: () => `ACCEPT INVITE`,
    alreadyHaveAccountButton: () => `ALREADY HAVE AN ACCOUNT?`,
    rows: {
      selfCustody: {
        title: () => `Your keys, your coins`,
...
    banner: () => `An error occurred`,
  },
  // HomeScreen.tsx
  home: {
    pending: (pendingDollars: string) => `+ $${pendingDollars} PENDING`,
    finishAccountSetUp: () => `Secure your account`,
    yourBalance: () => `Your balance`,
    deposit: () => `Deposit`,
    request: () => `Request`,
    send: () => `Send`,
  },
  // InviteScreen.tsx
  invite: {
...
