...
import { Colorway } from "../style/skins";
import { useTheme } from "../style/theme";

/** 1.23 or 1,23 depending on user locale */
export const amountSeparator = i18NLocale.decimalSeparator || ".";

/** Returns eg "$1.00" or "$1,23" or "$1.2345" */
export function getAmountText({
  dollars,
  amount,
  symbol,
  fullPrecision,
}: {
...
