...
function getFeeText(amount?: number) {
  if (amount == null) {
    return "PENDING";
  }

  let feeStr = "$" + amountToDollars(amount);
  if (amount > 0 && feeStr === "$0.00") {
    feeStr = "< $0.01";
  }
  return feeStr === "$0.00" ? "NO FEE" : feeStr + " FEE";
}

