...
        type="primary"
        title="Submit"
        onPress={() => onNext({ isTestnet })}
        disabled={!isValid}
      />
      <Spacer h={16} />
      <TextButton title="Join waitlist" onPress={linkToWaitlist} />
    </View>
  );
}

function FlowSelectionPage({
  onNext,
...
