appId: com.daimo
---
- assertVisible: Welcome to Daimo
- tapOn: Accept Invite
- runFlow:
    when:
      visible: "Allow Paste"
    commands:
      - tapOn: Allow Paste
- assertVisible: Join waitlist
- tapOn: enter invite code
- inputText: testnet
- hideKeyboard
- assertVisible:
    text: "submit"
    enabled: true
- tapOn: submit
- inputText: "maestro"
- inputRandomNumber:
    length: 8
- assertVisible:
    text: CREATE ACCOUNT
    enabled: true
- tapOn: CREATE ACCOUNT
- assertVisible: Notifications
- tapOn: Allow Notifications
- assertVisible: Your balance.*
